# django-docker

./: .env.example  .pre-commit-config.yaml  ci.compose.yml  compose.yml  pyproject.toml
backend/: .env.example  manage.py  pytest.ini
backend/config/: asgi.py  common.py  env.py  settings.py  urls.py  wsgi.py
backend/staticfiles/: staticfiles.json
docker/django/: Dockerfile  ci.Dockerfile  docker-entrypoint.sh
docker/ssh/: sshd_config
