[project]
name = "django-next"
version = "0.1.0"
description = "Django with Next.js dockerized version"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "django>=5.1.5",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "whitenoise>=6.8.2",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "flake8-annotations>=3.1.1",
    "flake8-annotations-coverage>=0.0.6",
    "flake8-bandit>=4.1.1",
    "flake8-broken-line>=1.0.0",
    "flake8-bugbear>=24.12.12",
    "pytest>=8.3.4",
    "reorder-python-imports>=3.14.0",
    "yesqa>=1.5.0",
    "flake8-builtins>=2.5.0",
    "flake8-commas>=4.0.0",
    "flake8-comprehensions>=3.16.0",
    "flake8-debugger>=4.1.2",
    "flake8-eradicate>=1.5.0",
    "flake8-executable>=2.1.3",
    "flake8-fixme>=1.1.1",
    "flake8-future-import>=0.4.7",
    "flake8-pyi>=24.9.0",
    "flake8-pytest>=1.4",
    "flake8-pytest-style>=2.1.0",
    "flake8-mutable>=1.2.0",
    "flake8-string-format>=0.3.0",
    "flake8-todo>=0.7",
    "flake8-unused-arguments>=0.0.13",
    "pytest-django>=4.9.0",
    "pyupgrade>=3.19.1",
]
